
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ buf ;



void SET_PORT(char *buf, int port) {
 *(unsigned short *)(((buf)+22)) = (port);
 char tmp = buf[22];
 buf[22] = buf[23];
 buf[23] = tmp;
}
